correct z-index of toolbar-toggle-button

--- a/src/App.css
+++ b/src/App.css
@@ -236,4 +236,5 @@ body {
   position: absolute;
   top: 0;
   right: 0;
+  z-index: 1;
 }
